more tests + more realism therein